--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
     background-color: var(--background-color);
 }
 
-#home{
+#home, #about{
   background-color: var(--background-color);
 }
 .navbar{
@@ -49,8 +49,10 @@ body {
   font-size: var(--title);
   font-weight: var(--regular);
 }
-.button{
+#home a{
   text-decoration: none;
+}
+.button{
   color: var(--accent-color);
   text-transform: uppercase;
   font-size: var(--button);
@@ -73,4 +75,17 @@ a.nav-link-active{
 a.nav-link:hover{
   color: var(--accent-color)!important;
 }
-  
+
+/* about */
+.box{
+  background-color: var(--card-color);
+  font-size: var(--body);
+}
+.headtitle{
+  font-size: var(--subtitle);
+  font-weight: var(--regular);
+  font-family: var(--Exo);
+}
+.headtitle span{
+  color: var(--accent-color);
+}
